@@ -51,8 +51,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -98,6 +101,11 @@
             <groupId>org.glavo.kala</groupId>
             <artifactId>kala-common</artifactId>
             <version>0.67.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.cvc5</groupId>
+            <artifactId>cvc5</artifactId>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
